:sparkles: Basketball court is being shown

--- a/Hoops/Base.lproj/Main.storyboard
+++ b/Hoops/Base.lproj/Main.storyboard
@@ -1,24 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Hoops" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Owl-mY-CML">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IsB-hb-9mT">
+                                <rect key="frame" x="175" y="321" width="24" height="24"/>
+                                <state key="normal" image="add"/>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plane Detected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTH-ks-Ncd">
+                                <rect key="frame" x="106" y="60" width="164" height="30.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Owl-mY-CML" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0D1-1k-szk"/>
+                            <constraint firstItem="IsB-hb-9mT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3tG-QS-1OJ"/>
+                            <constraint firstItem="Owl-mY-CML" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Omd-nH-uMZ"/>
+                            <constraint firstItem="gTH-ks-Ncd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="T7e-9Q-MBs"/>
+                            <constraint firstItem="IsB-hb-9mT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WzF-Xc-iqP"/>
+                            <constraint firstItem="Owl-mY-CML" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fZy-8T-ZPT"/>
+                            <constraint firstItem="gTH-ks-Ncd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wAM-0c-dLa"/>
+                            <constraint firstItem="Owl-mY-CML" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xer-79-rqu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="planeDetectedLabel" destination="gTH-ks-Ncd" id="uyJ-Tm-P2j"/>
+                        <outlet property="sceneView" destination="Owl-mY-CML" id="smx-b3-ZOQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="add" width="24" height="24"/>
+    </resources>
 </document>
